deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-frontend
  labels:
    service: udagram-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      service: udagram-frontend
  template:
    metadata:
      labels:
        service: udagram-frontend
        api: external
    spec:
      containers:
      - name: udagram-frontend
        image: pinmaing/udagram-frontend
        imagePullPolicy: Always 
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"                
      restartPolicy: Always
