deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: udagram-frontend
  name: udagram-frontend
spec:
  ports:
  - name: "8100"
    port: 8100
    protocol: TCP
    targetPort: 80
  selector:
    service: udagram-frontend
  type: LoadBalancer
